  list.
* **Update:** All the DGrid table columns are now resizable.
* **Update:** GanttColumn now scrolls to the desired date so that the date will
  be in the middle of the view.
* **Update:** GanttColumn now shows the width of the days/weeks correctly.
* **New:** References are now shown in a dojox.image.LightBox dialog.

0.1.0.b2
========

* **New:** Stalker_Pyramid now uses a brand new implementation for the
  gantt chart which utilizes a DGrid with OnDemand capabilities. The new Gantt
  Chart is over 100x faster then the previous implementation.
* **Update:** Started to move the view designs towards a RESTFul Service style.
* **Update:** Files stored in Stalker Pyramid Local Storage (SPL Storage) are
  now reached with the 'SPL'
  (ex: http://192.168.0.64:6543/SPL/SPL/e8/cb/e8cb374b62e54165a56e216de58eede4.jpg)
  prefix instead of revealing the real path on the server.
* **New:** It is now possible to upload and query References (Link instances
  assigned as references) for Task, Asset, Shot and Sequences.
* **Update:** Adding studio vacation method is changed.Vacation that has not
    got a user is suppose to be studio vacation
* **Fix:** Minor bug is fixed in update vacation
* **Fix:** Minor bug is fixed in auth.py and time_log.py.


0.1.0.b1
========

* **Update:** The Pyramid part of Stalker is moved in to a new package (this
  one).
* **Fix:** Fixed DBSession, it is now configured with ZopeTransactionExtension
  independent of Stalkers own configuration.
* **Fix:** Fixed TimeLog update dialog timing bug. TimeTextBox values are set
  by 'set' method.
* **New:** Hierarchical names of the task are added to Task Tool Tip window.
* **New:** Hierarchical names of the task are added to Create/Update TimeLog
  dialog.
* **New:** It is now possible to duplicate a task hierarchy in gantt chart now.
* **Update:** In the summary page of Task update dialog is called based on
  task entity type.